--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A collection of Chart JS examples",
   "main": "gulpfile.js",
   "scripts": {
+    "build--dev": "gulp build--dev",
+    "build--prod": "gulp build--prod",
     "serve": "gulp build--dev && gulp watch",
     "deploy": "git subtree push --prefix dist origin gh-pages",
     "setupsubtree": "git add dist && git commit -m \"Initial dist subtree commit\" && git push"
