--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "A collection of Chart JS examples",
   "main": "gulpfile.js",
   "scripts": {
-    "build--dev": "gulp build--dev",
-    "build--prod": "gulp build--prod",
+    "build-dev": "gulp build--dev",
+    "build-prod": "gulp build--prod",
     "serve": "gulp build--dev && gulp watch",
-    "deploy": "git subtree push --prefix dist origin gh-pages",
-    "setupsubtree": "git add dist && git commit -m \"Initial dist subtree commit\" && git push"
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
     "type": "git",
